kubernetes-files/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-paths
spec:
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 8089
          - path: /bye
            pathType: Prefix
            backend:
              service:
                name: bye-service
                port:
                  number: 8090
          - path: /sleep
            pathType: Prefix
            backend:
              service:
                name: sleep-service
                port:
                  number: 8091
